# learnbuild123d

./: README.md  helloworld.ipynb  helloworld_builder.ipynb  introductory_examples_builder.ipynb  pyproject.toml
colabs/: Ipyvolume.ipynb  build123test.py  ipyvolume.py
custom_display_jupyter/: jupyter_tools.py  test.ipynb  test.py  use_jupyter_cadquery.ipynb  use_jupyter_cadquery.py  use_pyvista.ipynb  use_pyvista.py  useitkwidgets.py  usevtk.ipynb  usevtk.py
notebooks/: 24-04-02.ipynb  boo.ipynb  boo.py  builder_mode.ipynb  builder_mode.py  display_patched.ipynb  display_patched.py  footrest.ipynb  footrest.py  footrest.step  footrest.stl  footrest_final copy.ipynb  footrest_final.ipynb  footrest_final.py  footrest_part1.ipynb  footrest_part1.py  footrest_part2.ipynb  footrest_part2.py  footrest_part3.ipynb  footrest_part3.py  introductory_example1.ipynb  introductory_example1.py  introductory_example2.ipynb  introductory_example2.py  introductory_example2b.ipynb  introductory_example2b.py  test.ipynb  test1.ipynb  test1.py  testing_multiple_interactive.ipynb  testing_multiple_interactive.py
notebooks/footrest/: blender-claudeai.py  fusion3d-claudeai.py
pull_request/: 1.ipynb  1.py  display_patch.py  template_render.js
