[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "learnbuild123"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = ["build123d", "notebook", "nbclient", "jupytext"]

[tool.setuptools]
py-modules = []

[tool.jupytext]
formats = "ipynb,py:percent"

[dependency-groups]
dev = [
    "poethepoet>=0.31.1",
]
